--- a/SSHBuddy.csproj
+++ b/SSHBuddy.csproj
@@ -53,11 +53,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums\ConnectStatus.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="frmMain.Designer.cs">
+      <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
     <Compile Include="IO\FileHandler.cs" />
     <Compile Include="Lists\ClientDetails.cs" />
@@ -71,6 +71,12 @@
     <Compile Include="UI\ClientUI.Designer.cs">
       <DependentUpon>ClientUI.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\CustomScriptUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\CustomScriptUI.Designer.cs">
+      <DependentUpon>CustomScriptUI.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\MasterPassUI.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,8 +89,8 @@
     <Compile Include="UI\PingTargetUI.Designer.cs">
       <DependentUpon>PingTargetUI.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="frmMain.resx">
+      <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -97,6 +103,9 @@
     </Compile>
     <EmbeddedResource Include="UI\ClientUI.resx">
       <DependentUpon>ClientUI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\CustomScriptUI.resx">
+      <DependentUpon>CustomScriptUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\MasterPassUI.resx">
       <DependentUpon>MasterPassUI.cs</DependentUpon>
